--- a/index.html
+++ b/index.html
@@ -1,20 +1,62 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
-  </head>
 
-  <body>
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Color Picker</title>
 
-    <img src="gojo-satoru.jpg" alt="" width="500px">
-    
-    <form action="index.html" action="post">
-        <label for=""> Select color from color picker below: </label>
-        <br>
-        <input type="color">
-    </form>
-  </body>
+  <link rel="shortcut icon" href="favicon_io/favicon.ico" type="image/x-icon">
+
+
+  <!-- Google fonts code snippet -->
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+  <link
+    href="https://fonts.googleapis.com/css2?family=Merriweather&family=Montserrat&family=Poppins:wght@400;600;700&family=Roboto&display=swap"
+    rel="stylesheet" />
+
+  <!-- styles sheet link -->
+
+  <link rel="stylesheet" href="styles.css" />
+</head>
+
+<body>
+
+  <nav class="navbar">
+
+    <h1 class="title">Color Picker</h1>
+    <svg class="curved-svg" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
+      <path class="svg-path" fill="#EFFFFD" fill-opacity="1"
+        d="M0,288L40,272C80,256,160,224,240,197.3C320,171,400,149,480,154.7C560,160,640,192,720,186.7C800,181,880,139,960,154.7C1040,171,1120,245,1200,240C1280,235,1360,149,1400,106.7L1440,64L1440,320L1400,320C1360,320,1280,320,1200,320C1120,320,1040,320,960,320C880,320,800,320,720,320C640,320,560,320,480,320C400,320,320,320,240,320C160,320,80,320,40,320L0,320Z">
+      </path>
+    </svg>
+
+  </nav>
+
+  <div class="row parent-div">
+    <div class="main-div column">
+
+      <form class="form-control" action="">
+        <label for="input-color">Choose Color:</label>
+        <input type="color" id="input-color" name="colorInput" value="#0099ff">
+      </form>
+      <form action="" method="post">
+        <label for="hex-code">Hex Code:</label>
+        <input type="text" id="hex-code" value="#0099ff">
+      </form>
+      <form action="">
+        <input type="file" name="Input File" id="input-file" accept="image/*">
+      </form>
+
+    </div>
+
+    <div class="display-image-div column"></div>
+
+  </div>
+
+  <script src="index.js"></script>
+</body>
+
 </html>
